open number keyboard on mobile

--- a/index.html
+++ b/index.html
@@ -66,7 +66,11 @@
 		    background-color: #555555;
 		    color: white;
 		}
-
+		input::-webkit-outer-spin-button, 
+		input::-webkit-inner-spin-button {
+		    -webkit-appearance: none;
+		    margin: 0;
+		}
 	</style>
 </head>
 <body>
@@ -76,16 +80,16 @@
 	<div id="CadtoUsd">
 		<h2>Canadian dollars to American dollars</h2>
 		<p>Please enter the amount in canadian dollars: </p>
-		$<input type="number" placeholder="Dollars" min="0" id="dollarsa" class="dollars"> .
-		<input type="number" placeholder="Cents" min="0" max="100" id="centsa" maxlength="2" class="cents">
+		$<input type="number" placeholder="Dollars" min="0" id="dollarsa" class="dollars" onselect="enterfunc()" pattern="[0-9]" inputmode="numeric"> .
+		<input type="number" placeholder="Cents" min="0" max="100" id="centsa" maxlength="2" class="cents" onselect="enterfunc()" pattern="[0-9]" inputmode="numeric">
 		<button onclick="convertcadusd()" class="customButton">Convert</button>
 		<p id="USD">$0 USD</p>
 	</div>
 	<div id="UsdtoCad">
 		<h2>American dollars to Canadian dollars</h2>
 		<p>Please enter the amount in American dollars: </p>
-		<input type="number" placeholder="Dollars" min="0" id="dollarsb" class="dollars">
-		<input type="number" placeholder="Cents" min="0" max="100" id="centsb" maxlength="2" class="cents">
+		<input type="number" placeholder="Dollars" min="0" id="dollarsb" class="dollars" onselect="enterfunc2()" pattern="[0-9]" inputmode="numeric">
+		<input type="number" placeholder="Cents" min="0" max="100" id="centsb" maxlength="2" class="cents" onselect="enterfunc2()" pattern="[0-9]*" inputmode="numeric">
 		<button onclick="convertusdcad()" class="customButton">Convert</button>
 		<p id="CAD">$0 CAD</p>
 	</div> 
@@ -108,7 +112,14 @@
 			converted = Math.round(100 * converted) / 100;
 			document.getElementById("CAD").textContent = "$" + converted + " CAD";
 		}
-
+		function enterfunc() {
+			if ((e.keyCode || e.which) == 13) {
+				convertcadusd();
+		}
+		function enterfunc2() {
+			if ((e.keyCode || e.which) == 13) {
+				convertusdcad();
+		}
 	</script>
 </body>
 </html>
